--- a/data_exploration.Rmd
+++ b/data_exploration.Rmd
@@ -65,9 +65,12 @@ expected_rate_table <- aggregated_data %>%
   mutate(first_donation_to_expiry = as.integer(difftime(expiryDate, first_donation_date, units = "days")),
          event_to_expiry = as.integer(difftime(expiryDate, eventDate, units = "days")),
          first_donation_to_event = as.integer(difftime(eventDate, first_donation_date, units = "days")),
+         first_donation_to_download = as.integer(difftime(download_date, first_donation_date, units = "days")),
          days_since_event= as.integer(difftime(download_date, eventDate, units = "days")),
          event_month = format(eventDate, "%m"), 
-         event_year = format(eventDate, "%Y")) %>%
+         event_year = format(eventDate, "%Y"),
+         first_donation_month = format(first_donation_date, "%m"),
+         first_donation_year = format(first_donation_date, "%Y")) %>%
   mutate(months_expiry_to_event = as.integer((event_to_expiry*7)/30))
 
 #grpup by 3 month period instead?
@@ -92,15 +95,21 @@ get_nearest_weight <- Vectorize(function(days){
   matched_row <- expiry_function %>%
     filter(first_donation_to_expiry > days) %>%
     filter(first_donation_to_expiry == min(first_donation_to_expiry))
-  print(matched_row)
   ifelse(nrow(matched_row) == 1, 
          return(matched_row$weight),
          return(max(expiry_function$weight)))
 })
 
 expected_rate_table <- expected_rate_table %>%
-  filter(!is.na(first_donation_to_expiry)) %>%
-  mutate(nearest_weight = get_nearest_weight(first_donation_to_expiry))
+  filter(!is.na(first_donation_to_download)) %>%
+  mutate(nearest_weight = get_nearest_weight(first_donation_to_download))
+
+expected_rate_by_charity <- expected_rate_table %>%
+  group_by(charity, first_donation_month, first_donation_year) %>%
+  summarise(expected_frequency = sum(nearest_weight)) %>%
+  filter(first_donation_year == 2017) %>%
+  group_by(charity) %>%
+  summarise(monthly_rate = sum(expected_frequency)/12)
 
 #expected rate by min donations
 
